[gd_scene load_steps=2 format=3 uid="uid://byw4c6cvbce5g"]

[ext_resource type="Script" uid="uid://bmc8i22yw7a54" path="res://Resources/Scenes/TitleScreen.gd" id="1_kh5nd"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kh5nd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -23.5
offset_right = 20.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0

[node name="SettingsMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="BackgroundPanel" type="Panel" parent="SettingsMenu"]
custom_minimum_size = Vector2(600, 700)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SettingsScroll" type="ScrollContainer" parent="SettingsMenu/BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsVBox" type="VBoxContainer" parent="SettingsMenu/BackgroundPanel/SettingsScroll"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="SettingsMenu/BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.107
anchor_top = 0.127
anchor_right = 1.107
anchor_bottom = 0.127
offset_left = -36.2
offset_top = -27.9
offset_right = 35.8
offset_bottom = 28.1
